Continue working in API doc and code snippets

--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -139,6 +139,10 @@ body {
   margin: 0 0 -3px 0;
 }
 
+.img-github-link {
+  margin: 0;
+}
+
 .numbered-item {
   margin-top: 20px;
   margin-bottom: 20px;
