--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,8 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
+  <link href="{{ site.baseurl }}/assets/css/syntax.css" rel="stylesheet">
+
   {% include font-includes.html %}
 
   <!-- Icons -->
