--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,3 +1,4 @@
 <!-- Additional head bits without overriding original head -->
-<script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/main.js" /></script>
+<script src="{{ site.baseurl }}/assets/js/anchor.min.js"></script>
