--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -182,6 +182,12 @@ body {
   opacity: 0.5;
 }
 
+.code-desc {
+  font-size: 0.75rem;
+  margin: 20px 0 0 20px;
+  width: 600px;
+}
+
 
 
 /* -----------------------------------------------------------
