--- a/_includes/sidebar-nav-links.html
+++ b/_includes/sidebar-nav-links.html
@@ -1,7 +1,7 @@
 <nav id="sidebar-nav-links">
   {% if site.sidebar_home_link %}
     <a class="home-link {% if page.url == '/' %} active{% endif %}"
-        href="{{ site.baseurl }}/">Home</a>
+        href="{{ site.baseurl }}/">Introduction</a>
   {% endif %}
   {% if site.sidebar_blog_link %}
     <a class="page-link {% if page.url == site.sidebar_blog_link %} active{% endif %}"
