--- a/_includes/page-links.html
+++ b/_includes/page-links.html
@@ -3,11 +3,14 @@
   `sidebar_link: true` in the front-matter. See readme for usage.
 {% endcomment %}
 {% assign pages_list = site.pages %}
-{% for node in pages_list %}
-  {% if node.title != null %}
-    {% if node.sidebar_link %}
+{% for group in site.groups %}
+  <span class="sidebar-group-title">{{ group.name }}</span>
+  {% for node in pages_list %}
+    {% if node.title != null and node.group == group.id and node.sidebar_link %}
       <a class="page-link {% if page.url == node.url %} active{% endif %}"
-          href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
+        href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
     {% endif %}
-  {% endif %}
+  {% endfor %}
 {% endfor %}
+
+
