--- a/_includes/sidebar-nav-links.html
+++ b/_includes/sidebar-nav-links.html
@@ -1,5 +1,6 @@
 <nav id="sidebar-nav-links">
   {% if site.sidebar_home_link %}
+    <span class="sidebar-group-title">Getting started</span>
     <a class="home-link {% if page.url == '/' %} active{% endif %}"
         href="{{ site.baseurl }}/">Introduction</a>
   {% endif %}
