--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -35,13 +35,13 @@
     font-size: 1.5rem;
     border-radius: 50%;
     color: white;
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 2.4rem;
+    height: 2.4rem;
     text-align: center;
     float: left;
     margin-right: 20px;
     margin-bottom: 10px;
-    margin-top: -3px;
+    margin-top: -2px;
   }
 }
 
@@ -59,6 +59,7 @@ body {
   flex-direction: column;
   min-width: 100vw;
   min-height: 100vh;
+  font-weight: lighter;
 }
 
 #sidebar {
@@ -98,6 +99,7 @@ body {
 
   > .content {
     flex-grow: 1;
+    padding-bottom: 50px;
   }
 }
 
@@ -194,7 +196,36 @@ body {
   margin-top: 1.2rem;
 }
 
+.page-link {
+  font-weight: lighter;
+}
 
+.clean-table {
+  border: none !important;
+  font-size: 100%;
+}
+
+.clean-table tbody tr td {
+  background-color: white;
+  border: none;
+}
+
+.corpora-inline-table {
+  text-align: center;
+}
+
+.corpora-inline-table {
+  text-align: center;
+}
+
+.corpus img {
+  display: inline;
+  margin: 0;
+}
+
+.corpus {
+  font-size: 0.8rem;
+}
 
 /* -----------------------------------------------------------
   Mobile view
@@ -371,6 +402,7 @@ body {
 
   &.active {
     font-weight: bold;
+    text-shadow: 2px 2px #db7a0e;
   }
 }
 
