- Add page for general search - Add internal links - Change sidebar style - Modify sidebar footer and copyright

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -7,7 +7,7 @@ id: introduction
 <div class="content">
   <div class="two-third-col">
     <h1>Welcome to tagtog</h1>
-    <p>This is the official documention for <a href="https://www.tagtog.net" title="tagtog.net - a text annotation tool ready to train AI">tagtog</a>, an efficient text annotation tool ready to train AI. Served on the cloud or on-premises. <strong>Simple</strong>.</p> 
+    <p>This is the official documention for {% include inline-image.html name="icon_leafs.png" width="18" %}<a href="https://www.tagtog.net" title="tagtog.net - a text annotation tool ready to train AI">tagtog</a>, an efficient text annotation tool ready to train AI. Served on the cloud or on-premises. <strong>Simple</strong>.</p> 
     <p><strong>Annotate manually or automatically</strong>. Use already trained machine learning models or train your own model to annotate and work at scale. Simply annotate manually and tagtog will generate a model with no hassle in deployment or maintenance. Save time and costs.</p>
     <p>Invite others to annotate in your projects and <strong>collaborate</strong> to build together awesome stuff: find custom insights in text automatically, augment or index your data, train your own AI, classify text, etc.</p>
     <p>Below are some of the things you can do using tagtog. For more in-depth information or tutorials, use the navigation to the left to explore our documentation.</p>
@@ -208,7 +208,7 @@ id: introduction
     <div class="two-third-col">
       <p>This search engine can be used through the <strong>user interface or the <a href="/API.html">API</a></strong>. You can use directly the API as your search interface or simply augment your existing engine.</p>
       <p>Annotators can use it to find texts that are not annotated yet or documents related to their specific annotation task. </p>
-      <p><a href="/search-queries.html">Continue reading</a></p>
+      <p><a href="/search.html">Continue reading</a></p>
     </div>
     <div class="one-third-col">
       {% include message.html message="The user interface will help you to build the search queries" %}
