--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,4 +1,7 @@
-<p>
+<p id="copyright">
+  {% if site.version %}
+    <span class="site-version"><br/><br/>tagtog-docs v{{ site.version }}</span>
+  {% endif %}
   &copy; {{ site.time | date: '%Y' }}.
-  <a href="{{ site.baseurl }}/LICENSE.md">MIT License.</a>
+  <a href="{{ site.app_url }}">tagtog sp. z o.o.</a>
 </p>
