--- a/_sass/hydeout/_variables.scss
+++ b/_sass/hydeout/_variables.scss
@@ -31,8 +31,9 @@ $heading-spacing: 0.5rem !default;
 $section-spacing: 2rem !default;
 $sidebar-width: 15rem !default;
 
-$large-breakpoint: 49rem !default;
-$medium-breakpoint: 65rem !default;
+$large-breakpoint: 768px !default;
+$medium-breakpoint: 1124px !default;
+
 $large-font-size: 1.1rem !default;
 $caption-font-size: 0.8rem !default;
 
