--- a/_sass/hydeout/tabs.scss
+++ b/_sass/hydeout/tabs.scss
@@ -43,12 +43,12 @@
   background-color: #fff;
   float: left;
   margin-bottom: 20px;
-  width: auto;
+  width: 100%;
   border-radius: 5px;
 }
 
 .tab-content {
-  width: 660px;
+  width: 100%;
   padding: 20px 20px 0 20px;
   display: none;
 }
