Add tagtog link to the sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
   <header>
     <div class="site-title">
       <a href="{{ site.app_url }}/">
-        <img class="logo" src="/assets/img/circle_2leafstext.png" title="Documentation for tagtog app" alt="Documentation for tagtog app">
+        <img class="logo" src="/assets/img/circle_2leafstext.png" title="Go to web app at tagtog.net" alt="Go to web app at tagtog.net">
       </a>
 
     </div>
