--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -101,6 +101,12 @@ body {
     margin: -10px 0 0 0;
     float: left;
   }
+
+  .link-tagtog-sidebar-bottom {
+    margin-top: 5px;
+    margin-left: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  }
 }
 
 #copyright{
@@ -269,6 +275,7 @@ body {
 .corpus {
   font-size: 0.8rem;
 }
+
 
 /* -----------------------------------------------------------
   Mobile view
