--- a/_includes/custom-icon-links.html
+++ b/_includes/custom-icon-links.html
@@ -1,1 +1,3 @@
 <!-- Optional additional links to insert for icons links -->
+
+<span class="link-tagtog-sidebar-bottom">{% include inline-image.html name="icon_leafs.png" width="18" %} <a href="https://www.tagtog.net"><i>tagtog.net</i></a></span>
