- Add examples for tagtog.py script - Update readme - Update tagtog.py script adding shortcuts for params

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -112,6 +112,7 @@ id: introduction
       </table>
     </div>
     <div class="one-third-col">
+        {% include message.html message="Pre-trained models can be used also in <strong>on-premises</strong> version of tagtog. Model is self-contained on your instance and no Internet connection is required. " %}
     </div>
   </div>
 
