- Add support for emojis - Add ML page - Add support for styled custom unordered list - Update readme

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -54,7 +54,7 @@ id: introduction
 
     <div class="two-third-col">
       <h3>Index your data</h3>
-      <p>Use already trained models or simply train your own model within tagtog to annotate automatically your data. These annotations will be the meta-information used to index your data and make it searchable.</p>
+      <p>Use already trained models or simply train your own model within tagtog to annotate automatically your data. These annotations will be the meta-information used to index your data. This data augmentation improves the <strong>discoverability</strong> and it is key to <strong>make search quicker and more intuitive</strong> for users.</p>
     </div>
     <div class="one-third-col">
       {% include message.html message="You can export to your system the meta-information used to index your data and handle it locally" %}
@@ -202,7 +202,7 @@ id: introduction
   <div class="page-section">
     <div class="two-third-col">
       <h2>Concept search</h2>
-      <p>Each fragment of text annotated or processed using tagtog is <strong>indexed</strong> within your project. The search engine makes easier to <strong>discover patterns or find actionable insights</strong>. This is specially handy when you have trained a model that annotates automatically relevant information that you would like to query. For example, if you have trained a model that has extracted skills in thousands of CVs, those got indexed and you can search across them using normalizations, entity classes, etc. You can do things like: <code>entity:softskill:time-management</code> to retrieve all CVs from people who are good organizing their work time.</p>
+      <p>Each fragment of text annotated or processed using tagtog is <strong>indexed</strong> within your project. The search engine makes easier to <strong>discover patterns or find actionable insights</strong>. This is specially handy when you have trained a model that annotates automatically relevant information. For example, if you have trained a model that has extracted skills in thousands of CVs, those got indexed and you can search across them using normalizations, entity classes, etc. You can do things like: <code>entity:softskill:time-management</code> to retrieve all CVs from people who are good organizing their work time.</p>
     </div>
     <div class="one-third-col"></div>
 
