Complete ML doc

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -190,7 +190,7 @@ id: introduction
           <td></td>
         </tr>
         <tr>
-          <td><strong>On-premises</strong>. If you need to meet strong privacy regulations, legal requirements, or you simply want to make a custom installation within your infrastructure, tagtog is also served on-premises. This is a self-contained version (no Internet connection is required) of tagtog, <strong>no data will leave your infrastructure</strong>. To make the installation the easiest possible we offer tagtog contained in a <a href="https://www.docker.com/" title="Docker official site"><strong>Docker</strong></a> image.</td>
+          <td><strong>On-premises</strong>. If you need to meet strong privacy regulations, legal requirements, or you simply want to make a custom installation within your infrastructure or any public cloud (AWS, Google, Azure, etc) , tagtog is also served on-premises. This is a self-contained version (no Internet connection is required) of tagtog, <strong>no data will leave your infrastructure</strong>. To make the installation the easiest possible we offer tagtog contained in a <a href="https://www.docker.com/" title="Docker official site"><strong>Docker</strong></a> image.</td>
           <td class="centered" style="width:15%">{% include image.html name="docker.svg" %}</td>
         </tr>
       </table>
