Fix lower case extension and company name

--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -3,5 +3,5 @@
     <span class="site-version"><br/><br/>tagtog-docs v{{ site.version }}</span>
   {% endif %}
   &copy; {{ site.time | date: '%Y' }}.
-  <a href="{{ site.app_url }}">tagtog sp. z o.o.</a>
+  <a href="{{ site.app_url }}">tagtog Sp. z o.o.</a>
 </p>
