--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -41,7 +41,7 @@ id: introduction
     <div class="one-third-col">
     </div>
     <div class="two-third-col">
-      <p class="numbered-item"><span class="number-1">1</span><strong>Provide tagtog with as many initial examples as possible</strong>. Bootstrap a model with pre-annotated data or <a href="/projects.html#dictionaries">dictionaries</a> with the terminology you would like to identify automatically. If you don't have these resources, no worries. Just start from the scratch.</p>
+      <p class="numbered-item"><span class="number-1">1</span><strong>Provide tagtog with as many initial examples as possible</strong>. Bootstrap a model with pre-annotated data or <a href="/projects.html#dictionaries">dictionaries</a> with the terminology you would like to identify automatically. If you don't have these resources, no worries. Just start from scratch.</p>
       
       <p class="numbered-item"><span class="number-2">2</span><strong>Train a model</strong>: import text (cloud or on-premises) through the <a href="/API.html">API</a> or the user interface. The text is annotated automatically. You or a team just need to correct the wrong model predictions in the annotation editor. Repeat this step until you get the accuracy level required.</p>
       <p class="numbered-item"><span class="number-3">3</span><strong>Congratulations! You get a machine learning model ready for production use</strong>. Simply send text to the API or user interface to retrieve relevant insights. If you detect any problem with the results, you can always continue annotating to fine tune the model.</p>
